# idaes-mcp

./: .gitignore  README.md  main.py  pyproject.toml  step_solve.py  step_solve_valve.py
examples/: ahuora_flowsheet.py  harden_flowsheet.py  heat_pump.py  heat_pump_broken_1.py  heat_pump_broken_1_explanation.md  valve.py  valve_broken_1.py  valve_broken_1_explanation.md  valve_broken_2.py  valve_broken_2_explanation.md  valve_working_1.py  valve_working_2.py
examples/idaes_mcp/: server.py
examples/json/: model.json
examples/prompts/: COPY_PASTE_PROMPT.md  DIAGNOSTIC_AGENT_SYSTEM_PROMPT.md
